apidoc4j-parser/src/main/java/io/github/flylib/apidoc4j/parser/antlr/api/ApiParser.java
// Generated from D:/git/flylib/apidoc4j/apidoc4j-parser/src/main/antlr4\Api.g4 by ANTLR 4.7
package io.github.flylib.apidoc4j.parser.antlr.api;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ApiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		K_API=1, K_APIPARAM=2, K_APIPARAMEXAMPLE=3, K_APIDEFINE=4, K_APINAME=5, 
		K_APIGROUP=6, K_APIDESCRIPTION=7, K_APISUCCESS=8, K_APIVERSION=9, STRING_UNICODE=10, 
		PATH_VALUE=11, VERSION=12, OP_LPAREN=13, OP_RPAREN=14, OP_LBRACE=15, OP_RBRACE=16, 
		OP_LBRACK=17, OP_RBRACK=18, OP_BACK_SLASH=19, OP_AT=20, SPACE=21, ENTER=22, 
		DOT=23;
	public static final int
		RULE_apidoc = 0, RULE_otherComment = 1, RULE_fieldExpr = 2, RULE_fieldString = 3, 
		RULE_fieldApi = 4, RULE_fieldApiName = 5, RULE_fieldApiParam = 6, RULE_fieldApiParamExample = 7, 
		RULE_fieldApiSuccess = 8, RULE_fieldApiVersion = 9, RULE_name = 10, RULE_method = 11, 
		RULE_path = 12, RULE_title = 13, RULE_group = 14, RULE_type = 15, RULE_field = 16, 
		RULE_description = 17, RULE_paramTitle = 18, RULE_example = 19, RULE_version = 20, 
		RULE_multiText = 21;
	public static final String[] ruleNames = {
		"apidoc", "otherComment", "fieldExpr", "fieldString", "fieldApi", "fieldApiName", 
		"fieldApiParam", "fieldApiParamExample", "fieldApiSuccess", "fieldApiVersion", 
		"name", "method", "path", "title", "group", "type", "field", "description", 
		"paramTitle", "example", "version", "multiText"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'api'", "'apiParam'", "'apiParamExample'", "'apiDefine'", "'apiName'", 
		"'apiGroup'", "'apiDescription'", "'apiSuccess'", "'apiVersion'", null, 
		null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'/'", "'@'", "' '", 
		"'\n'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "K_API", "K_APIPARAM", "K_APIPARAMEXAMPLE", "K_APIDEFINE", "K_APINAME", 
		"K_APIGROUP", "K_APIDESCRIPTION", "K_APISUCCESS", "K_APIVERSION", "STRING_UNICODE", 
		"PATH_VALUE", "VERSION", "OP_LPAREN", "OP_RPAREN", "OP_LBRACE", "OP_RBRACE", 
		"OP_LBRACK", "OP_RBRACK", "OP_BACK_SLASH", "OP_AT", "SPACE", "ENTER", 
		"DOT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Api.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ApiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ApidocContext extends ParserRuleContext {
		public OtherCommentContext otherComment() {
			return getRuleContext(OtherCommentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ApiParser.EOF, 0); }
		public List<FieldExprContext> fieldExpr() {
			return getRuleContexts(FieldExprContext.class);
		}
		public FieldExprContext fieldExpr(int i) {
			return getRuleContext(FieldExprContext.class,i);
		}
		public ApidocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apidoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitApidoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApidocContext apidoc() throws RecognitionException {
		ApidocContext _localctx = new ApidocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_apidoc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			otherComment();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OP_AT) {
				{
				{
				setState(45);
				fieldExpr();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherCommentContext extends ParserRuleContext {
		public List<MultiTextContext> multiText() {
			return getRuleContexts(MultiTextContext.class);
		}
		public MultiTextContext multiText(int i) {
			return getRuleContext(MultiTextContext.class,i);
		}
		public List<TerminalNode> ENTER() { return getTokens(ApiParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(ApiParser.ENTER, i);
		}
		public OtherCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherComment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitOtherComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherCommentContext otherComment() throws RecognitionException {
		OtherCommentContext _localctx = new OtherCommentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_otherComment);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			multiText();
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(54);
						match(ENTER);
						}
						}
						setState(57); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==ENTER );
					setState(59);
					multiText();
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				match(ENTER);
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENTER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldExprContext extends ParserRuleContext {
		public TerminalNode OP_AT() { return getToken(ApiParser.OP_AT, 0); }
		public FieldStringContext fieldString() {
			return getRuleContext(FieldStringContext.class,0);
		}
		public List<TerminalNode> ENTER() { return getTokens(ApiParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(ApiParser.ENTER, i);
		}
		public FieldExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldExprContext fieldExpr() throws RecognitionException {
		FieldExprContext _localctx = new FieldExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fieldExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(OP_AT);
			setState(71);
			fieldString();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENTER) {
				{
				{
				setState(72);
				match(ENTER);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldStringContext extends ParserRuleContext {
		public FieldApiContext fieldApi() {
			return getRuleContext(FieldApiContext.class,0);
		}
		public FieldApiNameContext fieldApiName() {
			return getRuleContext(FieldApiNameContext.class,0);
		}
		public FieldApiParamContext fieldApiParam() {
			return getRuleContext(FieldApiParamContext.class,0);
		}
		public FieldApiParamExampleContext fieldApiParamExample() {
			return getRuleContext(FieldApiParamExampleContext.class,0);
		}
		public FieldApiSuccessContext fieldApiSuccess() {
			return getRuleContext(FieldApiSuccessContext.class,0);
		}
		public FieldApiVersionContext fieldApiVersion() {
			return getRuleContext(FieldApiVersionContext.class,0);
		}
		public FieldStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldString; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldStringContext fieldString() throws RecognitionException {
		FieldStringContext _localctx = new FieldStringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldString);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_API:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				fieldApi();
				}
				break;
			case K_APINAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				fieldApiName();
				}
				break;
			case K_APIPARAM:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				fieldApiParam();
				}
				break;
			case K_APIPARAMEXAMPLE:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				fieldApiParamExample();
				}
				break;
			case K_APISUCCESS:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				fieldApiSuccess();
				}
				break;
			case K_APIVERSION:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				fieldApiVersion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiContext extends ParserRuleContext {
		public TerminalNode K_API() { return getToken(ApiParser.K_API, 0); }
		public TerminalNode OP_LBRACE() { return getToken(ApiParser.OP_LBRACE, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(ApiParser.OP_RBRACE, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public FieldApiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiContext fieldApi() throws RecognitionException {
		FieldApiContext _localctx = new FieldApiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldApi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(K_API);
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				match(SPACE);
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(92);
			match(OP_LBRACE);
			setState(93);
			method();
			setState(94);
			match(OP_RBRACE);
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(95);
				match(SPACE);
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(100);
			path();
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					match(SPACE);
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(106);
				title();
				}
				break;
			}
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(109);
				match(SPACE);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiNameContext extends ParserRuleContext {
		public TerminalNode K_APINAME() { return getToken(ApiParser.K_APINAME, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public FieldApiNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApiName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApiName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiNameContext fieldApiName() throws RecognitionException {
		FieldApiNameContext _localctx = new FieldApiNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fieldApiName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(K_APINAME);
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				match(SPACE);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(121);
			name();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(122);
				match(SPACE);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiParamContext extends ParserRuleContext {
		public TerminalNode K_APIPARAM() { return getToken(ApiParser.K_APIPARAM, 0); }
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public TerminalNode OP_LPAREN() { return getToken(ApiParser.OP_LPAREN, 0); }
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public TerminalNode OP_RPAREN() { return getToken(ApiParser.OP_RPAREN, 0); }
		public TerminalNode OP_LBRACE() { return getToken(ApiParser.OP_LBRACE, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(ApiParser.OP_RBRACE, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public FieldApiParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApiParam; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApiParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiParamContext fieldApiParam() throws RecognitionException {
		FieldApiParamContext _localctx = new FieldApiParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldApiParam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(K_APIPARAM);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				match(SPACE);
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_LPAREN) {
				{
				setState(134);
				match(OP_LPAREN);
				setState(135);
				group();
				setState(136);
				match(OP_RPAREN);
				}
			}

			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_LBRACE) {
				{
				setState(140);
				match(OP_LBRACE);
				setState(141);
				type();
				setState(142);
				match(OP_RBRACE);
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(143);
					match(SPACE);
					}
					}
					setState(146); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				}
			}

			setState(150);
			field();
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(152); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(151);
					match(SPACE);
					}
					}
					setState(154); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(156);
				description();
				}
				break;
			}
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(159);
				match(SPACE);
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiParamExampleContext extends ParserRuleContext {
		public TerminalNode K_APIPARAMEXAMPLE() { return getToken(ApiParser.K_APIPARAMEXAMPLE, 0); }
		public ExampleContext example() {
			return getRuleContext(ExampleContext.class,0);
		}
		public TerminalNode OP_LBRACE() { return getToken(ApiParser.OP_LBRACE, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(ApiParser.OP_RBRACE, 0); }
		public ParamTitleContext paramTitle() {
			return getRuleContext(ParamTitleContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public FieldApiParamExampleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApiParamExample; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApiParamExample(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiParamExampleContext fieldApiParamExample() throws RecognitionException {
		FieldApiParamExampleContext _localctx = new FieldApiParamExampleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldApiParamExample);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(K_APIPARAMEXAMPLE);
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(166);
					match(SPACE);
					}
					}
					setState(169); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(171);
				match(OP_LBRACE);
				setState(172);
				type();
				setState(173);
				match(OP_RBRACE);
				}
				break;
			}
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(178); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(177);
					match(SPACE);
					}
					}
					setState(180); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(182);
				paramTitle();
				}
			}

			setState(185);
			example();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiSuccessContext extends ParserRuleContext {
		public TerminalNode K_APISUCCESS() { return getToken(ApiParser.K_APISUCCESS, 0); }
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public TerminalNode OP_LPAREN() { return getToken(ApiParser.OP_LPAREN, 0); }
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public TerminalNode OP_RPAREN() { return getToken(ApiParser.OP_RPAREN, 0); }
		public TerminalNode OP_LBRACE() { return getToken(ApiParser.OP_LBRACE, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OP_RBRACE() { return getToken(ApiParser.OP_RBRACE, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public FieldApiSuccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApiSuccess; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApiSuccess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiSuccessContext fieldApiSuccess() throws RecognitionException {
		FieldApiSuccessContext _localctx = new FieldApiSuccessContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fieldApiSuccess);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(K_APISUCCESS);
			setState(189); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(188);
				match(SPACE);
				}
				}
				setState(191); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_LPAREN) {
				{
				setState(193);
				match(OP_LPAREN);
				setState(194);
				group();
				setState(195);
				match(OP_RPAREN);
				}
			}

			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_LBRACE) {
				{
				setState(199);
				match(OP_LBRACE);
				setState(200);
				type();
				setState(201);
				match(OP_RBRACE);
				setState(203); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(202);
					match(SPACE);
					}
					}
					setState(205); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				}
			}

			setState(209);
			field();
			setState(216);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				{
				setState(211); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(210);
					match(SPACE);
					}
					}
					setState(213); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SPACE );
				setState(215);
				description();
				}
				break;
			}
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(218);
				match(SPACE);
				}
				}
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldApiVersionContext extends ParserRuleContext {
		public TerminalNode K_APIVERSION() { return getToken(ApiParser.K_APIVERSION, 0); }
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(ApiParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ApiParser.SPACE, i);
		}
		public FieldApiVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldApiVersion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApiVisitor ) return ((ApiVisitor<? extends T>)visitor).visitFieldApiVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldApiVersionContext fieldApiVersion() throws RecognitionException {
		FieldApiVersionContext _localctx = new FieldApiVersionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fieldApiVersion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(K_APIVERSION);
			setState(226); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(225);
				match(SPACE);
				}
				}
				setState(228); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(230);
			version();
			setState(234);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(231);
				match(SPACE);
				}
				}
				setState(236);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING_UNICODE() { return getToken(ApiParser.STRING_UNICODE, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
